--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,7 @@ SMTP_USERNAME=SOME_USERNAME
 SMTP_PASSWORD=SOME_PASSWORD
 SMTP_SERVER=SOME_HOST
 SMTP_PORT=2525
+
+# If using database in docker compose
+DATABASE_URL=trilogy://root@$(docker compose port database 3306)/
+# DATABASE_URL=trilogy://root@localhost::3306/
