Add a better CI pipeline with security scans. (#110)
* Fix main branch sanity check

* Add security tools: bundler-audit and brakeman. Ignore existing issues

* Add workflows for security and change name to CI for workflow

* Remove circleci in favor of using GitHub

* Add the scanner task to CI

* Remove an extra ruby end

* Fix the name

* Add rails later, check github actions now

--- a/.github/workflows/sanity-check-main.yml
+++ b/.github/workflows/sanity-check-main.yml
@@ -11,12 +11,40 @@ jobs:
   publish-badge:
     runs-on: ubuntu-latest
 
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+          MYSQL_DATABASE: awbw_test
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+
+      - name: Setup database
+        run: |
+          bundle exec rake db:create db:schema:load
+        env:
+          RAILS_ENV: test
+          # AWS credentials
+          AWS_REGION: ${{ vars.AWS_REGION }}
+          AWS_S3_BUCKET: ${{ vars.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # SMTP settings
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
 
       - name: Run RSpec (SimpleCov JSON + summary via at_exit)
         env:
